MNPL-20 | Resolve merge conflicts
